src/objects/Direct_Marketing_Center__c.object
<CustomObject>
    <description>Direct Marketing Center (DMC)</description>
    <fields>
        <fullName>DMC_Name__c</fullName>
        <description>DMC Name</description>
        <globalPicklist>Direct_Marketing_Center</globalPicklist>
        <inlineHelpText>DMC Name</inlineHelpText>
        <label>DMC Name</label>
        <required>true</required>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Direct Marketing Center Description</description>
        <label>Description</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <description>For use in data migration.</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <type>AutoNumber</type>
    </fields>
    <label>Direct Marketing Center</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>DMC_Name__c</columns>
        <columns>Description__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>DMC{0000}</displayFormat>
        <label>DMC Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Direct Marketing Center</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>